--- a/public/assets/scss/pages/logged-in/_global.scss
+++ b/public/assets/scss/pages/logged-in/_global.scss
@@ -320,6 +320,9 @@ body.logged-in {
         background-color: white;
         float: right;
         padding-top: 35px;
+        @include breakpoint($sm-down) {
+            overflow-y: auto;
+        }
     }
     .close-logged-mobile-profile-menu {
         position: absolute;
