add withdraw btn

--- a/public/assets/scss/pages/logged-in/dentist/_single-contract-view.scss
+++ b/public/assets/scss/pages/logged-in/dentist/_single-contract-view.scss
@@ -4,4 +4,13 @@
             background-color: #ebebeb;
         }
     }
+    .withdraw-section {
+        .dentist-withdraw {
+            &:hover {
+                .st0 {
+                    fill: $blue_green_color; 
+                }
+            }
+        }
+    }
 }
