--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10049,5 +10049,7 @@ section.congratulation-and-time-section {
 
 .single-contract-view-section.cancelled .contract-participant {
   background-color: #ebebeb; }
+.single-contract-view-section .withdraw-section .dentist-withdraw:hover .st0 {
+  fill: #126585; }
 
 /*# sourceMappingURL=style.css.map */
