--- a/public/assets/scss/pages/logged-in/dentist/_single-contract-view.scss
+++ b/public/assets/scss/pages/logged-in/dentist/_single-contract-view.scss
@@ -11,6 +11,13 @@
                     fill: $blue_green_color;
                 }
             }
-        } 
+        }
+    }
+    .camping-withdraw-time-left-section {
+        .clock-container {
+            background-color: $blue_green_color;
+            @include rounded(20px);
+            @include box-shadow(0 2px 6px 0 rgba(0, 0, 0, 0.4)); 
+        }
     }
 }
