--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10129,5 +10129,28 @@ section.congratulation-and-time-section {
           width: 15px; }
           .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock .flip-clock-divider:first-child {
             width: 0; } }
+    .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock ul {
+      width: 40px;
+      height: 50px; }
+      .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock ul li {
+        line-height: 50px; }
+        .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock ul li .inn {
+          font-size: 40px;
+          background: #438199; }
+      @media screen and (min-width: 992px) and (max-width: 1199px) {
+        .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock ul {
+          width: 30px; }
+          .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock ul li .inn {
+            font-size: 35px; } }
+      @media screen and (min-width: 768px) and (max-width: 991px) {
+        .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock ul {
+          width: 25px; }
+          .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock ul li .inn {
+            font-size: 30px; } }
+      @media screen and (max-width: 450px) {
+        .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock ul {
+          width: 30px; }
+          .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock ul li .inn {
+            font-size: 35px; } }
 
 /*# sourceMappingURL=style.css.map */
