--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10049,7 +10049,7 @@ section.congratulation-and-time-section {
 
 .single-contract-view-section.cancelled .contract-participant {
   background-color: #ebebeb; }
-.single-contract-view-section .withdraw-section .dentist-withdraw:hover .st0 {
+.single-contract-view-section .camping-withdraw-section .dentist-withdraw:hover .st0 {
   fill: #126585; }
 .single-contract-view-section .camping-withdraw-time-left-section .clock-container {
   margin-top: 40px;
@@ -10079,7 +10079,8 @@ section.congratulation-and-time-section {
       height: 60px; }
       .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock .flip-clock-divider .flip-clock-dot {
         width: 7px;
-        height: 7px; }
+        height: 7px;
+        left: 6px; }
         .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock .flip-clock-divider .flip-clock-dot.bottom {
           bottom: auto;
           top: 40px; }
@@ -10087,34 +10088,16 @@ section.congratulation-and-time-section {
           top: 25px; }
       .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock .flip-clock-divider.days .flip-clock-label {
         right: -75px; }
-        @media screen and (min-width: 992px) and (max-width: 1199px) {
-          .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock .flip-clock-divider.days .flip-clock-label {
-            right: -55px; } }
-        @media screen and (min-width: 768px) and (max-width: 991px) {
-          .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock .flip-clock-divider.days .flip-clock-label {
-            right: -50px; } }
         @media screen and (max-width: 450px) {
           .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock .flip-clock-divider.days .flip-clock-label {
             right: -55px; } }
       .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock .flip-clock-divider.hours .flip-clock-label {
         right: -80px; }
-        @media screen and (min-width: 992px) and (max-width: 1199px) {
-          .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock .flip-clock-divider.hours .flip-clock-label {
-            right: -63px; } }
-        @media screen and (min-width: 768px) and (max-width: 991px) {
-          .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock .flip-clock-divider.hours .flip-clock-label {
-            right: -58px; } }
         @media screen and (max-width: 450px) {
           .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock .flip-clock-divider.hours .flip-clock-label {
             right: -63px; } }
       .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock .flip-clock-divider.minutes .flip-clock-label {
         right: -85px; }
-        @media screen and (min-width: 992px) and (max-width: 1199px) {
-          .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock .flip-clock-divider.minutes .flip-clock-label {
-            right: -67px; } }
-        @media screen and (min-width: 768px) and (max-width: 991px) {
-          .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock .flip-clock-divider.minutes .flip-clock-label {
-            right: -64px; } }
         @media screen and (max-width: 450px) {
           .single-contract-view-section .camping-withdraw-time-left-section .clock-container .clock .flip-clock-divider.minutes .flip-clock-label {
             right: -67px; } }
