test withdraw period

--- a/public/assets/scss/pages/logged-in/dentist/_single-contract-view.scss
+++ b/public/assets/scss/pages/logged-in/dentist/_single-contract-view.scss
@@ -103,6 +103,9 @@
                     }
                 }
             }
+            &.red-background {
+                background-color: #d64949;
+            }
         }
     }
 }
