--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -1397,7 +1397,11 @@
 .module.contract-response-message .wrapper {
   border: 2px solid #126585;
   padding-top: 15px;
-  padding-bottom: 15px; }
+  padding-bottom: 15px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  border-radius: 4px; }
 
 body {
   background-color: #222d32; }
