--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -1366,6 +1366,7 @@
             border: 2px solid $blue_green_color;
             padding-top: 15px;
             padding-bottom: 15px;
+            @include rounded(4px);
         }
     }
 }
