--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -1367,6 +1367,15 @@
             padding-top: 15px;
             padding-bottom: 15px;
             @include rounded(4px);
+            .close-btn {
+                color: $blue_green_color;
+                opacity: 1;
+                font-size: 30px;
+                position: absolute;
+                right: 10px;
+                top: 0;
+                font-weight: 700;
+            }
         }
     }
 }
