--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -1375,6 +1375,7 @@
                 right: 10px;
                 top: 0;
                 font-weight: 700;
+                cursor: pointer;
             }
         }
     }
