--- a/public/assets/scss/additionals/_variables.scss
+++ b/public/assets/scss/additionals/_variables.scss
@@ -10,6 +10,7 @@ $solid_gray: #f2f2f2;
 $light_gray: #888888;
 
 $pending: #29adde;
+$pending: #29adde;
 $active: #239234;
 $awaiting_payment_awaiting_approval: #239289;
 $cancelled: #e92f30;
@@ -69,3 +70,7 @@ $cancelled: #e92f30;
 .cancelled-color {
     color: $cancelled;
 }
+
+.pending-background {
+    background-color: $pending;
+} 
