--- a/public/assets/scss/global/_global.scss
+++ b/public/assets/scss/global/_global.scss
@@ -609,11 +609,59 @@ fieldset {
             margin-top: -20px;
             opacity: 1;
             color: #424242;
+            position: absolute;
+            right: 15px;
         }
         .modal-dialog {
+            width: 95%;
+            max-width: 900px;
             .modal-body {
                 .bootbox-body {
                     padding: 0 8%;
+                    .border-bottom {
+                        border-bottom: 1px solid black;
+                    }
+                    .line-crossed {
+                        position: relative;
+                        text-align: center;
+                        span {
+                            background-color: white;
+                            z-index: 5;
+                            padding: 0 10px;
+                            position: relative;
+                        }
+                        &:after {
+                            content: '';
+                            height: 1px;
+                            left: 0;
+                            width: 100%;
+                            background-color: black;
+                            @include vertical-align(absolute);
+                        }
+                    }
+                    form {
+                        padding: 0 50px;
+                        text-align: left;
+                        .error-handle {
+                            display: block;
+                        }
+                        &#enrich-profile {
+                            color: #888888;
+                            textarea {
+                                border: 1px solid #cccccc;
+                                font-size: 16px;
+                                width: 100%;
+                                padding: 10px;
+                                @include rounded(4px);
+                            }
+                        }
+                    }
+                    @include breakpoint($xs) {
+                        padding: 0;
+                        form {
+                            padding: 0;
+                        }
+                    }
                 }
             }
         }
@@ -886,6 +934,90 @@ fieldset {
                                         display: block;
                                     }
                                     &.second {
+                                        .user-type-container {
+                                            .user-type {
+                                                width: 50%;
+                                                .custom-button {
+                                                    padding: 5px 10px;
+                                                    display: block;
+                                                    border: 2px solid #dddddd;
+                                                    color: #dddddd;
+                                                    font-size: 20px;
+                                                    @include rounded(4px);
+                                                    .custom-radio {
+                                                        margin-right: 5px;
+                                                        width: 20px;
+                                                        height: 20px;
+                                                        line-height: 20px;
+                                                        border: 1px solid #dddddd;
+                                                        text-align: center;
+                                                        font-size: 0;
+                                                        @include rounded(50%);
+                                                        .circle {
+                                                            width: 10px;
+                                                            height: 10px;
+                                                            background-color: black;
+                                                            background-color: gray;
+                                                            vertical-align: middle;
+                                                            display: none;
+                                                            @include rounded(50%);
+                                                        }
+                                                    }
+                                                }
+                                                &.active {
+                                                    .custom-button {
+                                                        color: $blue_green_color;
+                                                        border: 2px solid $blue_green_color;
+                                                        .custom-radio {
+                                                            .circle {
+                                                                display: inline-block;
+                                                            }
+                                                        }
+                                                    }
+                                                }
+                                            }
+                                        }
+                                        .privacy-policy-row {
+                                            input[type='checkbox'] {
+                                                max-width: 170px;
+                                            }
+                                            svg.svg {
+                                                border-color: $blue_green_color !important;
+                                            }
+                                            label {
+                                                display: block;
+                                                white-space: normal;
+                                                text-indent: 25px;
+                                            }
+                                            a {
+                                                text-decoration: underline;
+                                                color: $blue_green_color;
+                                            }
+                                        }
+                                        .pretty {
+                                            white-space: normal;
+                                            padding-bottom: 5px;
+                                            .state {
+                                                position: relative;
+                                                i {
+                                                    left: 0;
+                                                    top: 0;
+                                                    position: absolute;
+                                                }
+                                                label {
+                                                    line-height: 20px;
+                                                    &:before, &:after {
+                                                        left: 0;
+                                                        top: 0;
+                                                    }
+                                                }
+                                                svg.svg {
+                                                    top: 0;
+                                                }
+                                            }
+                                        }
+                                    }
+                                    &.third {
                                         .phone {
                                             display: flex;
                                             align-items: center;
@@ -897,27 +1029,8 @@ fieldset {
                                                 flex: 1;
                                             }
                                         }
-                                        .pretty {
-                                            white-space: normal;
-                                            padding-bottom: 5px;
-                                            .state {
-                                                position: relative;
-                                                i {
-                                                    left: 1px;
-                                                    top: 1px;
-                                                    position: absolute;
-                                                }
-                                                label {
-                                                    line-height: 20px;
-                                                    &:before, &:after {
-                                                        left: 1px;
-                                                        top: 1px;
-                                                    }
-                                                }
-                                            }
-                                        }
                                     }
-                                    &.third {
+                                    &.fourth {
                                         .avatar {
                                             padding-right: 20px;
                                             width: 50%;
@@ -936,20 +1049,6 @@ fieldset {
                                                 label {
                                                     text-indent: 25px;
                                                 }
-                                            }
-                                        }
-                                        .privacy-policy-row {
-                                            svg.svg {
-                                                border-color: $blue_green_color !important;
-                                            }
-                                            label {
-                                                display: block;
-                                                white-space: normal;
-                                                text-indent: 25px;
-                                            }
-                                            a {
-                                                text-decoration: underline;
-                                                color: $dark_color;
                                             }
                                         }
                                         .combobox-container {
@@ -1021,7 +1120,7 @@ fieldset {
                                 padding: 7px 12px;
                             }
                             h2 {
-                                font-size: 35px;
+                                font-size: 30px;
                                 padding-bottom: 20px;
                                 font-family: "Calibri Light";
                             }
@@ -1042,7 +1141,7 @@ fieldset {
                                 display: none;
                             }
                             .form-register, .form-login {
-                                width: 70%;
+                                width: 75%;
                                 margin: 0 auto;
                                 @include breakpoint($xs) {
                                     width: 90%;
