--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -1118,6 +1118,36 @@
             @include rounded(0 4px 4px 0);
         }
     }
+    &.custom-google-select-style {
+        position: relative;
+        label {
+            width: auto !important;
+            font-size: 14px !important;
+            top: -8px;
+            padding: 0 5px !important;
+            -webkit-transform: none;
+            -ms-transform: none;
+            transform: none;
+            color: #126585;
+            font-weight: bold;
+            position: absolute;
+            cursor: pointer;
+            margin: 0;
+            background-color: white;
+            left: 10px;
+            @include rounded(4px);
+            @include simple_transition(.3s);
+        }
+        select {
+            border: 2px solid $blue_green_color;
+            cursor: pointer;
+            font-size: 16px;
+            font-family: 'Lato-Regular';
+            width: 100%;
+            padding: 10px 15px;
+            @include rounded(4px);
+        }
+    }
     &.camping-for-validation {
         .proof-success {
             display: none;
